//add changes here
10/6/23:
    - Created the base of the project
    - Added all of the scene parts to an exported variable for use in outside testing (map1.js)

10/7/23-10/8/23:
    - Created mouseCamera.js
    - Attempted to find an alternative for window.onload
        -Found [not-working] event DOMContentLoaded (index.js)
            - Event does not fire. Removing..

10/9/23:
    - Modified mouseCamera.js to add an event listener for (#newCanva)'s mouseover event (mouseCamera.js)

10/10/23:
    - Camera ellipsoid
    - Pointerlock FIX (was previously dysfunctional)

10/11/23:
    - WASD Controls